--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -1,13 +1,21 @@
+
+
 #thirdDiv{
     height: 600px;
     width: 500px;
     background: gray;
     padding: 50px;
-    border-width: 30px;
-    border-color: darkred;
+    border: 10px solid blue;
 }
 
 #spanId{
     font-size: 18px;
     margin: 50px;
+}
+
+h1{
+    color: blue;
+}
+img{
+    width: 400px;
 }
